--- a/views/shipments.handlebars
+++ b/views/shipments.handlebars
@@ -3,15 +3,22 @@
         <tr>
             <th>Order #</th>
             <th>Customer Name</th>
+            <th>Customer Email</th>
         </tr>
     </thead>
     <tbody>
-        {{#each orders}}
+        
+
+        {{#each shipments}}
+        
         <tr>
             <td>{{orderNumber}}</td>
             <td>{{shipTo.name}}</td>
+            <td>{{customerEmail}}</td>
             
         </tr>
+        
         {{/each}}
+
     </tbody>
 </table>
