--- a/views/shipments.handlebars
+++ b/views/shipments.handlebars
@@ -1,3 +1,4 @@
+<p>Total Shipments sent via Mobile: {{shipments.length}}</p>
 <table>
     <thead>
         <tr>
@@ -15,6 +16,7 @@
             <td>{{orderNumber}}</td>
             <td>{{shipTo.name}}</td>
             <td>{{customerEmail}}</td>
+            
             
         </tr>
         
