--- a/views/shipments.handlebars
+++ b/views/shipments.handlebars
@@ -5,17 +5,21 @@
             <th>Order #</th>
             <th>Customer Name</th>
             <th>Customer Email</th>
+            <th>Product Name</th>
+            <th>Product Quantity</th>
         </tr>
     </thead>
     <tbody>
         
 
-        {{#each shipments}}
+        {{#each lineItems}}
         
         <tr>
             <td>{{orderNumber}}</td>
-            <td>{{shipTo.name}}</td>
+            <td>{{recipientName}}</td>
             <td>{{customerEmail}}</td>
+            <td>{{productName}}</td>
+            <td>{{productQty}}</td>
             
             
         </tr>
