added algorithm to segregate recharge subscription only orders

--- a/views/shipments.handlebars
+++ b/views/shipments.handlebars
@@ -1,4 +1,5 @@
 <p>Total Shipments sent via Mobile: {{shipments.length}}</p>
+<p>Total line items: {{lineItems.length}}</p>
 <table>
     <thead>
         <tr>
