--- a/views/shipments.handlebars
+++ b/views/shipments.handlebars
@@ -1,3 +1,7 @@
+<div>
+<button>Previous Day</button>    
+<p> Date: {{date}}</p>
+<button>Next Day</button>
 <p>Total Shipments sent via Mobile: {{shipments.length}}</p>
 <p>Total line items: {{lineItems.length}}</p>
 
@@ -17,6 +21,7 @@
             </tr>
         {{/each}}
     </tbody>
+    <tfoot></tfoot>
 </table>
 
 <h5>Shipment Manifest Table</h5>
@@ -49,3 +54,4 @@
 
     </tbody>
 </table>
+</div>
